--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -36,6 +36,12 @@
     justify-content: space-between;
 }
 
+#languageImage {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
 .option {
     margin: 0 10px;
     font-size: 20px;
