--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -8,6 +8,7 @@
     background-position: 50% 70%;
     background-attachment: fixed;
     padding-top: 90px;
+    padding-bottom: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
