--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,7 +2,14 @@
 
 #footer_container {
     height: 200px;
-    margin-top: 50px;
+    margin: 30px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#footer_texts {
+    height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,4 +25,32 @@
 .textoFinal {
     color: black;
     font-family: 'Montserrat', sans-serif;
+}
+
+#footer_contacts {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#footer_contacts p a {
+    padding: 4px 8px;
+    background-color: #343a40;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+@media (max-width: 480px) {
+    #footer_container {
+        height: 450px;
+        flex-direction: column-reverse;
+    }
+
+    #footer_title {
+        font-size: 30px;
+    }
 }
