puting contact modal and new hover in skills container

--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -38,6 +38,11 @@
     transition: 0.5s;
 }
 
+.containerSkillsCards:has(.skillCard:hover) .skillCard:not(:hover) {
+    opacity: .6;
+    scale: .95;
+}
+
 .skillCard {
     width: 90%;
     height: 350px;
@@ -49,6 +54,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: all .2s;
+}
+
+.skillCard:hover {
+    scale: 1.05;
 }
 
 .skillCardImage {
