--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -13,7 +13,7 @@
     justify-content: space-between;
     position: fixed;
     transition: 0.5s;
-    z-index: 10;
+    z-index: 9;
 }
 
 #nameTitle {
@@ -56,7 +56,7 @@
     transform: scale(1.15);
 }
 
-#contacts {
+#headerContacts {
     width: 80px;
     display: flex;
     align-items: center;
