--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -17,6 +17,8 @@
 #bannerAboutMe {
     width: 50%;
     padding: 2%;
+    background-color: rgba(33, 37, 41, 0.7);
+    border-radius: 10px;
 }
 
 /* #bannerText {
@@ -62,8 +64,8 @@
 .link {
     width: 150px;
     height: 50px;
-    background-color: #212529;
-    color: #CED4DA;
+    background-color: #CED4DA;
+    color: black;
     font-family: "Roboto Slab";
     font-size: 20px;
     font-weight: 600;
@@ -78,8 +80,8 @@
 }
 
 .link:hover {
-    background-color: #CED4DA;
-    color: black;
+    background-color: #212529;
+    color: #CED4DA;
 }
 
 #bannerImage {
@@ -133,6 +135,7 @@
 @media (max-width: 480px) {
     
     #bannerContainer {
+        padding-top: 130px;
         flex-direction: column-reverse;
     }
 
