--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -34,6 +34,11 @@
     transition: 0.5s;
 }
 
+#containerProjectsCards:has(.projectCard:hover) .projectCard:not(:hover) {
+    opacity: .6;
+    scale: .95;
+}
+
 .titleContainer {
     display: flex;
 }
